# Miniaudio-CS

./: .editorconfig  .gitignore  .gitmodules  LICENSE  Miniaudio-CS.sln  README.md
.github/workflows/: build.yml
GenerateBindings/: BuildToolChain.cmake  CMakeLists.txt  CMakePresets.json  generate.gen  miniaudio.c  miniaudio_ex.c  miniaudio_ex.h  miniaudio_libopus.h  miniaudio_libvorbis.c  miniaudio_libvorbis.h  minivorbis.h  vcpkg.json
Miniaudio-CS/: Miniaudio-CS.csproj  Miniaudio.cs
native/osx-arm64/: libminiaudio.dylib
native/osx-x64/: libminiaudio.dylib
